<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:ignore="ContentDescription,SmallSp"
    tools:context=".Credits">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/shareButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:background="#fff"
                android:scaleType="centerCrop"
                android:src="@drawable/share"
                app:layout_constraintEnd_toEndOf="@+id/cardView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <ImageButton
                android:id="@+id/updateButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="#fff"
                android:scaleType="centerCrop"
                android:src="@drawable/download"
                app:layout_constraintEnd_toEndOf="@+id/cardView2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <TextView
                android:id="@+id/shareText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:text="@string/share_this_app"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/shareButton"
                app:layout_constraintStart_toStartOf="@+id/shareButton"
                app:layout_constraintTop_toBottomOf="@+id/shareButton" />

            <TextView
                android:id="@+id/downloadText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/update_app"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/updateButton"
                app:layout_constraintStart_toStartOf="@+id/updateButton"
                app:layout_constraintTop_toBottomOf="@+id/updateButton" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                app:cardElevation="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/constraintLayout3"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    tools:layout_editor_absoluteY="32dp">

                    <TextView
                        android:id="@+id/ownedby"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/owned_by"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/sandip_kumar_tripathi"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/image2"
                        app:layout_constraintStart_toEndOf="@+id/image2"
                        app:layout_constraintTop_toTopOf="@+id/image2"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/manager_sales"
                        android:textSize="10sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView16"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textView16"
                        app:layout_constraintTop_toBottomOf="@+id/textView16" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/jaypee_cement_corporation_limited"
                        android:textSize="10sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textView17"
                        app:layout_constraintTop_toBottomOf="@+id/textView17" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/gorakhpur_uttar_pradesh"
                        android:textSize="10sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView18"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textView18"
                        app:layout_constraintTop_toBottomOf="@+id/textView18" />

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/image2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="32dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ownedby">

                        <ImageView
                            android:id="@+id/profileImage2"
                            android:layout_width="135dp"
                            android:layout_height="135dp"
                            android:src="@drawable/profile1"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/overlayImage2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/overlay" />
                    </android.support.constraint.ConstraintLayout>
                </android.support.constraint.ConstraintLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:cardElevation="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView1">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageButton
                        android:id="@+id/githubButton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="32dp"
                        android:background="#fff"
                        android:scaleType="fitCenter"
                        android:src="@drawable/github"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/textView9"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textView9"
                        app:layout_constraintTop_toBottomOf="@+id/textView9" />

                    <ImageButton
                        android:id="@+id/linkedinButton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="32dp"
                        android:background="#fff"
                        android:scaleType="fitCenter"
                        android:src="@drawable/linkedin"
                        app:layout_constraintBottom_toBottomOf="@+id/githubButton"
                        app:layout_constraintStart_toEndOf="@+id/githubButton"
                        app:layout_constraintTop_toTopOf="@+id/githubButton" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/software_developer"
                        android:textSize="10sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView6"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/kiit_university_bhubaneswar"
                        android:textSize="10sp"
                        app:layout_constraintStart_toStartOf="@+id/textView7"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/gorakhpur_uttar_pradesh"
                        android:textSize="10sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView8"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textView8"
                        app:layout_constraintTop_toBottomOf="@+id/textView8" />


                    <TextView
                        android:id="@+id/developedBy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/developed_by"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="64dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/ishan_r_tripathi"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/image1"
                        app:layout_constraintStart_toEndOf="@+id/image1"
                        app:layout_constraintTop_toTopOf="@+id/image1"
                        app:layout_constraintVertical_bias="0.0" />

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/image1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="32dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/developedBy">

                        <ImageView
                            android:id="@+id/profileImage1"
                            android:layout_width="135dp"
                            android:layout_height="135dp"
                            android:src="@drawable/profile2"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/overlayImage1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/overlay" />
                    </android.support.constraint.ConstraintLayout>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>